Port Forge support for Minecraft 1.18.2